--- a/frontend/page.html
+++ b/frontend/page.html
@@ -46,6 +46,19 @@
 
 		<div id="scatter"></div>
 
+		<label for="pie_source">Source</label>
+		<select id="pie_source">
+			<option value="frontpage">Frontpage</option>
+			<option value="all">/r/all</option>
+		</select>
+		<label for="pie_type">Type</label>
+		<select id="pie_type">
+			<option value="all">All</option>
+			<option value="Image">Image</option>
+			<option value="Video">Video</option>
+			<option value="Link">Link</option>
+			<option value="Self">Self</option>
+		</select>
 		<select id="pie_option">
 			<option value="subreddit">Subreddit</option>
 			<option value="type">Type</option>
@@ -54,6 +67,7 @@
 		</select>
 		<label for="pie_count">Max colors</label>
 		<input id="pie_count" type="number" value="10" />
+
 		<div id="pie"></div>
 	</body>
 </html>
