--- a/frontend/page.html
+++ b/frontend/page.html
@@ -59,6 +59,12 @@
 			<option value="Link">Link</option>
 			<option value="Self">Self</option>
 		</select>
+		<label for="pie_nsfw">NSFW</label>
+		<select id="pie_nsfw">
+			<option value="all">All</option>
+			<option value="NSFW">NSFW</option>
+			<option value="SFW">SWF</option>
+		</select>
 		<select id="pie_option">
 			<option value="subreddit">Subreddit</option>
 			<option value="type">Type</option>
