--- a/frontend/page.html
+++ b/frontend/page.html
@@ -7,6 +7,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		<link href="frontend/frontend.css" rel="stylesheet" />
 		<script src="frontend/graph.js"></script>
+		<script src="frontend/data.js"></script>
 		<script src="frontend/frontend.js"></script>
 	</head>
 	<body>
