--- a/frontend/page.html
+++ b/frontend/page.html
@@ -8,6 +8,7 @@
 		<link href="frontend/frontend.css" rel="stylesheet" />
 		<script src="frontend/graph.js"></script>
 		<script src="frontend/data.js"></script>
+		<script src="frontend/matrix_processor.js"></script>
 		<script src="frontend/frontend.js"></script>
 	</head>
 	<body>
@@ -74,7 +75,27 @@
 		</select>
 		<label for="pie_count">Max colors</label>
 		<input id="pie_count" type="number" value="10" />
-
 		<div id="pie"></div>
+
+		<p>Average post progression over time</p>
+		<label for="line_color">Color</label>
+		<select id="line_color">
+			<option value="subreddit">Subreddit</option>
+			<option value="type">Type</option>
+			<option value="domain">Domain</option>
+			<option value="nsfwLabel">NSFW</option>
+		</select>
+		<label for="line_y">Y Axis</label>
+		<select id="line_y">
+			<option value="up">Upvotes</option>
+			<option value="down">Downvotes</option>
+			<option value="position">Position</option>
+			<option value="comments">Comments</option>
+		</select>
+		<label for="line_count">Max colors</label>
+		<input id="line_count" type="number" value="10" />
+		<label for="line_order">Order</label>
+		<input id="line_order" type="number" value="2" />
+		<div id="line"></div>
 	</body>
 </html>
